# PEAT

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  COPYRIGHT.rst  Dockerfile  NOTICE  README.md  SECURITY.md  SECURITY.rst  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: CONTRIBUTING.md  pull_request_template.md
.github/.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  devcontainer.yml  docker.yml  documentation.yml  release.yml  tests.yml
distribution/: build-docker.sh  build-linux-package.sh  file_version_info.txt  hook-manuf.py  linux-install-script.sh  peat.spec  sneakypeat.py  sneakypeat.spec  update_file_version_info.py
distribution/logos/: PEAT_Logo.ai  PEAT_Logo_white.ai  PEAT_icon.ai
distribution/opensearch-files/: peat-malcolm-dashboard.ndjson  quickstart.md
docs/: agent_fields.csv  authors.rst  conf.py  configure.rst  contributing.rst  data_model.rst  database_schema.rst  dependencies.rst  dependencies_table.rst  design_documents.rst  developer_reference.rst  development_infrastructure.rst  device_api.rst  device_modules.rst  elastic_implementation.rst  event_fields.csv  exemplar_documents.rst  general_apis.rst  glossary.rst  heat_api.rst  index.rst  install.rst  introduction.rst  log_fields.csv  mappings.rst  module_developer_guide.rst  mysql.rst  operate.rst  ot_devices_fields.csv  peat_api.rst  pull_summaries_fields.csv  python_examples.rst  reference_documents.rst  release_notes.rst  sel.rst  siemens.rst  supported_devices.csv  system_requirements.rst  tcp_ip_protocols_used_by_peat.csv  unintegrated_devices.csv
docs/field_references/: base_fields.csv  parse_summaries_fields.csv  scan_summaries_fields.csv
examples/: broadcast_targets.txt  example-parse-summary.json  example-pull-summary.json  example-scan-summary.json  ion_config.yaml  peat-config-sceptre-testing.yaml  peat-config-sel-force-telnet.yaml  peat-config-sel-serial-testing.yaml  peat-config-simple.yaml  peat-config.yaml  target_hosts.json  target_hosts.txt
examples/devices/sceptre/: README.md
examples/encryption/: encrypted_config.yaml  example_config.yaml
examples/encryption/example_peat_results/: README.md
examples/example_peat_module/: awesome_module.py  awesome_output.json  awesome_output_expected_device-data-full.json  example_device_page.html
examples/vscode/: launch.json
newsfragments/: 123.feature  59.feature  60.feature
peat/: __init__.py  __main__.py  cli_args.py  cli_main.py  config_crypto.py  consts.py  device.py  elastic.py  es_mappings.py  exit_handler.py  init.py  log_utils.py  module_manager.py  results_crypto.py  settings.py  settings_manager.py  utils.py
peat/api/: config_builder_api.py  crypto_api.py  heat_api.py  identify_methods.py  parse_api.py  pillage_api.py  pull_api.py  push_api.py  scan_api.py
peat/config_builder/: __init__.py  peatbuilder.py
peat/data/: __init__.py  base_model.py  data_utils.py  default_options.py  models.py  store.py  validators.py
peat/heat/: __init__.py  ftp_extractor.py  ftp_extractor_zeek_script.zeek  heat_classes.py  telnet_extractor.py  umas_extractor.py
peat/modules/: __init__.py
peat/modules/camlin/: __init__.py  totus.py  totus_http.py
peat/modules/fortinet/: __init__.py  fortigate.py  fortigate_conf.py  fortigate_consts.py  fortigate_dbl.py  fortigate_events.py
peat/modules/ge/: __init__.py  ge_relay.py  ge_rtu.py
peat/modules/idirect/: __init__.py  idirect.py  idirect_ssh.py
peat/modules/openplc/: __init__.py  config.yaml  openplcv4.py
peat/modules/rockwell/: __init__.py  ab_parse.py  ab_push.py  ab_scan.py  clx_cip.py  clx_const.py  clx_http.py  clx_relay_ladder_parser.py  clx_string_logic_parser.py  controllogix.py  l5x_parse.py  logic_l5x.py
peat/modules/sandia/: __init__.py  sceptre_fcd.py
peat/modules/schneider/: __init__.py
peat/modules/sel/: __init__.py  relay_parse.py  rtac_parse.py  sel_3620.py  sel_ascii.py  sel_comms.py  sel_consts.py  sel_http.py  sel_relay.py  sel_rtac.py  sel_serial.py  sel_telnet.py
peat/modules/siemens/: __init__.py  mlfb.py  siprotec.py
peat/modules/uefi/: __init__.py  uefi_hash_parse.py  uefi_spi_parse.py  uefi_tool.py
peat/modules/windows/: __init__.py  wince.py
peat/modules/woodward/: __init__.py  csharp_reader.py  easygen_3500xt.py  easygen_enums.py  easygen_svl.py  micronet.py  namedlist.py  parse_micronet.py  parse_wset.py  wdw_2301e.py  wdw_2301e_svl.py  wdw_svl.py  wdw_tc.py
peat/parsing/: arm_cpuid.py  command_parsers.py  logic_gen.py  tc6.py
peat/parsing/plc_open/: PLCControler.py  PLCGenerator.py  __init__.py
peat/protocols/: __init__.py  addresses.py  common.py  data_packing.py  discovery.py  forked_telnetlib.py  ftp.py  http.py  interfaces.py  ip.py  mysql.py  serial.py  snmp.py  ssh.py  telnet.py
scripts/: build_changelog.sh  docker-compose.yml  elastic-testing.sh  gen_rtac_events.py  install_peat.ps1  install_peat.sh  module_vendor_ids.py
tests/: conftest.py  generate_test_data_files.py  test_awesome_module.py  test_cli.py  test_cli_args.py  test_cli_commands.py  test_cli_main.py  test_config_crypto.py  test_consts.py  test_device.py  test_elastic.py  test_module_manager.py  test_results_crypto.py  test_settings.py  test_settings_manager.py  test_utils.py
tests/api/: test_parse_api.py  test_pillage_api.py  test_pull_api.py  test_push_api.py  test_scan_api.py
tests/data/: test_data_utils.py  test_models.py  test_store.py
tests/data_files/: dummy_text_file.txt  example-peat-configuration.json  test-scan-results-localhost-clx.json  test_load_from_file.json  test_load_from_file.yaml
tests/parsing/: test_command_parsers.py  test_tc6.py
tests/protocols/: test_addresses.py  test_common.py  test_discovery.py  test_ftp.py  test_http.py  test_interfaces.py  test_ip.py  test_mysql.py  test_pccc.py  test_serial.py  test_snmp.py  test_telnet.py
(+81 files in other folders)
